--- a/Python_Tkinter/calculadora.ipynb
+++ b/Python_Tkinter/calculadora.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "e5839f9c-1e2e-48b9-8f03-408a17e9bd9f",
    "metadata": {},
    "outputs": [
@@ -10,9 +10,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2.0\n",
       "+\n",
-      "-\n",
-      "8.0\n"
+      "5.0\n",
+      "=\n"
      ]
     }
    ],
@@ -41,6 +42,7 @@
     "b0 = tk.Button(root, text=\"0\", command=lambda: button_click(\"0\"))\n",
     "mas = tk.Button(root, text=\"+\", command=lambda: button_click(\"+\"))\n",
     "menos = tk.Button(root, text=\"-\", command=lambda: button_click(\"-\"))\n",
+    "igual = tk.Button(root, text=\"=\", command=lambda: button_click(\"=\"))\n",
     "\n",
     "\n",
     "b1.grid(row=0, column=0, padx=5, pady=5) \n",
@@ -55,7 +57,7 @@
     "b0.grid(row=3, column=0, padx=5, pady=5)\n",
     "mas.grid(row=3, column=1, padx=5, pady=5)\n",
     "menos.grid(row=3, column=2, padx=5, pady=5)\n",
-    "\n",
+    "igual.grid(row=4, column=0, padx=5, pady=5)\n",
     "# Start the Tkinter event loop\n",
     "root.mainloop()"
    ]
